--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,15 @@
 		    <artifactId>google-api-services-gmail</artifactId>
 		    <version>v1-rev110-1.25.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
